# controller-petunew

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: claude-md-lint.yml
petunew_agent/: __init__.py  agent.py  cli.py  mcp_server.py
petunew_agent/core/: __init__.py  auth.py  client.py  tutk.py
petunew_agent/models/: __init__.py  camera.py  device.py  feeding.py
petunew_agent/tools/: __init__.py  definitions.py  handler.py
re/: FINDINGS.md
