[project]
name = "petunew-agent"
version = "0.1.0"
description = "Agent-first interface for PetUNew smart WiFi camera pet feeders (TUTK/Kalay P2P)"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "cryptography>=42.0",
    "av>=13.0",
]

[project.optional-dependencies]
agent = [
    "anthropic>=0.39",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
petunew = "petunew_agent.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
